--- a/forHome.css
+++ b/forHome.css
@@ -3,6 +3,9 @@ body {
     line-height: 1.8;
     color: #818181;
   }
+a {
+    color: black;
+}
   h2 {
     font-size: 24px;
     text-transform: uppercase;
